@@ -1,3 +1,12 @@
+2005-07-20  Roman Kennke  <roman@kennke.org>
+
+	* javax/swing/JButton.java
+	(AccessibleJButton): Added accessibility support for JButton.
+	(getAccessibleContext): Implemented to return an AccessibleJButton.
+	* javax/swing/JLabel.java
+	(AccessibleJLabel): Added accessibility support for JLabel.
+	(getAccessibleContext): Implemented to return an AccessibleJLabel.
+
 2005-07-20  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/swing/JSlider.java
